# MS500_NETWORK_P4

./: CLAUDE.md  CMakeLists.txt  README.md  TASK.md  partitions.csv  sdkconfig  sdkconfig.ci  sdkconfig.ci.default_ip101  sdkconfig.defaults  sdkconfig.old
components/as_code/: CMakeLists.txt  idf_component.yml
components/as_code/include/: as_tools.h  fw_dnn.h  fw_loader.h  imx501.h  output_tensor_parser.h
components/as_code/private/: ai_inference.h  ai_nms.hpp  ai_utils.h  imx501_macro.h  imx501_reg_table.h
components/as_code/src/: ai_inference.cpp  ai_nms.cpp  ai_utils.cpp  as_tools.c  fw_dnn.c  fw_loader.c  imx501.c  output_tensor_parser.cpp
components/as_common_deps/: CMakeLists.txt  idf_component.yml
components/as_common_deps/flat_buffers/: CMakeLists.txt  apParams.flatbuffers_generated.h
components/esp_cam_sensor/: .component_hash  CMakeLists.txt  Kconfig  idf_component.yml  project_include.cmake
components/esp_cam_sensor/sensors/imx500/: Kconfig.imx500  imx500.c
components/esp_cam_sensor/sensors/imx500/cfg/: imx500_default.json
components/esp_cam_sensor/sensors/imx500/include/: imx500.h  imx500_types.h
components/esp_cam_sensor/sensors/imx500/private_include/: imx500_regs.h  imx500_settings.h
components/esp_cam_sensor/sensors/ov5647/: ov5647.c
components/esp_video/: idf_component.yml
components/esp_video/include/: esp_video_device_internal.h
components/esp_video/src/: esp_video_isp_pipeline.c
components/esp_video/src/device/: esp_video_csi_device.c  esp_video_jpeg_device.c
components/ethernet_init/: ethernet_init.c  idf_component.yml
components/usb_device_uvc/: CMakeLists.txt  Kconfig  idf_component.yml  usb_device_uvc.c
components/usb_device_uvc/include/: usb_device_uvc.h
components/usb_device_uvc/tusb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/ai_drivers/: ai_driver.c  ai_driver.h  ai_mipi_i2c.c  ai_mipi_i2c.h  ai_spi_dev.c  ai_spi_dev.h  ai_update_i2c.c  ai_update_i2c.h
main/ai_process/: ai_spi_receive.c  ai_spi_receive.h  bsp_inference.c  bsp_inference.h
main/bsp/: bsp_file_operate.c  bsp_file_operate.h  bsp_rtc.c  bsp_rtc.h  bsp_sd_card.c  bsp_sd_card.h  bsp_sd_dnn.c  bsp_sd_dnn.h  bsp_sd_ota.c  bsp_sd_ota.h  bsp_sleep.c  bsp_sleep.h  bsp_spiff.c  bsp_spiff.h  bsp_storage.c  bsp_storage.h  bsp_usb_cdc.c  bsp_usb_cdc.h
main/bsp_network/: bsp_ap_sta.c  bsp_ap_sta.h  bsp_ethernet.c  bsp_ethernet.h  bsp_http.c  bsp_http.h  bsp_http_async.c  bsp_http_async.h  bsp_http_async_test.c  bsp_http_async_test.h  bsp_http_sync.c  bsp_http_sync.h  bsp_http_test.c  bsp_http_test.h  bsp_http_test_async.c  bsp_http_test_async.h  bsp_http_test_sync.c  bsp_http_test_sync.h  bsp_lte_boot.c  bsp_lte_boot.h  bsp_lte_eg25.c  bsp_lte_eg25.h  bsp_lte_uart.c  bsp_lte_uart.h  bsp_mqtt.c  bsp_mqtt.h  bsp_network.c  bsp_network.h  ethernet_example_main.c  ethernet_example_main.h  mqtt_test.c  mqtt_test.h
main/bsp_video/: vc_config.c  vc_config.h  vc_save_jpg.c  vc_save_jpg.h  vc_uvc_cam.c  vc_uvc_cam.h  vc_uvc_jpg..c  vc_uvc_jpg.h  vc_video.c  vc_video.h  vc_video_draw.c  vc_video_draw.h  vc_video_v4l2.c  vc_video_v4l2.h
spiffs_data/dnn/: anchors.txt
spiffs_data/firmware/: firmware.fpk
spiffs_download/dnn/: network_info.txt
